Add logic to retrieve events from the DDBB

--- a/src/vboa/static/html/more_ingestion_time.html
+++ b/src/vboa/static/html/more_ingestion_time.html
@@ -2,7 +2,7 @@
   <div class="col-xs-3">
     <label>Ingestion time</label>
     <div class="input-group date" id="ingestion-time">
-      <input type="text" class="form-control"  name="stop"/>
+      <input type="text" class="form-control"  name="ingestion_time"/>
       <span class="input-group-addon">
         <span class="glyphicon glyphicon-calendar"></span>
       </span>
