Fix the interface to add more date selectors for querying events and sources
Add interfaces for querying by DIM signatures

--- a/src/vboa/static/html/more_generation_time.html
+++ b/src/vboa/static/html/more_generation_time.html
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="col-xs-3">
-    <label>Ingestion time</label>
+    <label>Generation time</label>
     <div class="input-group date">
-      <input type="text" class="form-control"  name="ingestion_time"/>
+      <input type="text" class="form-control" name="generation_time"/>
       <span class="input-group-addon">
         <span class="glyphicon glyphicon-calendar"></span>
       </span>
       <div>
-        <select class="form-control" style="padding-left: 0" name="ingestion_time_operator">
+        <select class="form-control" style="padding-left: 0" name="stop_operator">
           <option>></option>
           <option>>=</option>
           <option><</option>
