--- a/src/vboa/static/html/more_start_stop.html
+++ b/src/vboa/static/html/more_start_stop.html
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="col-xs-3">
     <label>Start</label>
-    <div class="input-group date" id="start">
+    <div class="input-group date">
       <input type="text" class="form-control" name="start"/>
       <span class="input-group-addon">
         <span class="glyphicon glyphicon-calendar"></span>
       </span>
       <div>
-        <select id="operators" class="form-control" style="padding-left: 0" name="start_operator">
+        <select class="form-control" style="padding-left: 0" name="start_operator">
           <option>></option>
           <option>>=</option>
           <option><</option>
@@ -20,13 +20,13 @@
   </div>
   <div class="col-xs-3">
     <label>Stop</label>
-    <div class="input-group date" id="stop">
+    <div class="input-group date">
       <input type="text" class="form-control"  name="stop"/>
       <span class="input-group-addon">
         <span class="glyphicon glyphicon-calendar"></span>
       </span>
       <div>
-        <select id="operators" class="form-control" style="padding-left: 0" name="stop_operator">
+        <select class="form-control" style="padding-left: 0" name="stop_operator">
           <option>></option>
           <option>>=</option>
           <option><</option>
