--- a/src/vboa/static/html/more_validity_start_validity_stop.html
+++ b/src/vboa/static/html/more_validity_start_validity_stop.html
@@ -1,12 +1,13 @@
-<div class="col-xs-3">
-  <label>Validity start</label>
-  <div class="input-group date" id="validity-start">
-    <input type="text" class="form-control" name="validity_start"/>
-    <span class="input-group-addon">
-      <span class="glyphicon glyphicon-calendar"></span>
-    </span>
-    <div>
-        <select id="operators" class="form-control" style="padding-left: 0" name="start_operator">
+<div class="row">
+  <div class="col-xs-3">
+    <label>Validity start</label>
+    <div class="input-group date">
+      <input type="text" class="form-control" name="validity_start"/>
+      <span class="input-group-addon">
+        <span class="glyphicon glyphicon-calendar"></span>
+      </span>
+      <div>
+        <select class="form-control" style="padding-left: 0" name="start_operator">
           <option>></option>
           <option>>=</option>
           <option><</option>
@@ -17,15 +18,15 @@
       </div>
     </div>
   </div>
-<div class="col-xs-3">
-  <label>Validity stop</label>
-  <div class="input-group date" id="validity-stop">
-    <input type="text" class="form-control" name="validity_stop"/>
-    <span class="input-group-addon">
-      <span class="glyphicon glyphicon-calendar"></span>
-    </span>
-    <div>
-        <select id="operators" class="form-control" style="padding-left: 0" name="stop_operator">
+  <div class="col-xs-3">
+    <label>Validity stop here</label>
+    <div class="input-group date">
+      <input type="text" class="form-control" name="validity_stop"/>
+      <span class="input-group-addon">
+        <span class="glyphicon glyphicon-calendar"></span>
+      </span>
+      <div>
+        <select class="form-control" style="padding-left: 0" name="stop_operator">
           <option>></option>
           <option>>=</option>
           <option><</option>
