--- a/src/vboa/static/html/more_value_query_annotations.html
+++ b/src/vboa/static/html/more_value_query_annotations.html
@@ -10,24 +10,27 @@
       <option>object</option>
     </select>
   </div>
-  <div class="col-xs-3 query-annotation-value-names">
-    <label>Value name like</label>
-    <input class="form-control" list="value_name_like_annotations" name="value_name_like"/>
-    <datalist id="value_name_like_annotations">
-    </datalist>
+  <div class="col-xs-3">
+    <label>Value name</label>
+    <div class="input-group" style="width: 100%">
+      <input class="form-control" style="width: 80%" name="value_name_like"/>
+      <select class="form-control" style="padding-left: 0; width: 20%" name="value_name_like_op">
+        <option>like</option>
+        <option>notlike</option>
+      </select>
+    </div>
   </div>
   <div class="col-xs-3">
     <label>Value</label>
     <div class="input-group" style="width: 100%">
       <input type="text" class="form-control" style="width: 80%" name="value"/>
       <select class="form-control" style="padding-left: 0; width: 20%" name="value_operator">
+        <option>==</option>
         <option>></option>
         <option>>=</option>
         <option><</option>
                    <option><=</option>
-                              <option>==</option>
         <option>!=</option>
-
       </select>
     </div>
   </div>
@@ -36,4 +39,6 @@
       <span class="glyphicon glyphicon-plus"></span>
     </span>
   </div>
+</div>
+<div id="more-value-query-annotations">
 </div>
