Fix name of operators for the validity period of the sources

--- a/src/vboa/static/html/more_validity_start_validity_stop.html
+++ b/src/vboa/static/html/more_validity_start_validity_stop.html
@@ -7,7 +7,7 @@
         <span class="glyphicon glyphicon-calendar"></span>
       </span>
       <div>
-        <select class="form-control" style="padding-left: 0" name="start_operator">
+        <select class="form-control" style="padding-left: 0" name="validity_start_operator">
           <option>==</option>
           <option>></option>
           <option>>=</option>
@@ -26,7 +26,7 @@
         <span class="glyphicon glyphicon-calendar"></span>
       </span>
       <div>
-        <select class="form-control" style="padding-left: 0" name="stop_operator">
+        <select class="form-control" style="padding-left: 0" name="validity_stop_operator">
           <option>==</option>
           <option>></option>
           <option>>=</option>
