--- a/src/vboa/static/html/more_value_query_annotations.html
+++ b/src/vboa/static/html/more_value_query_annotations.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-xs-3">
     <label>Value type</label>
-    <select style="width: 100%" name="value_type">
+    <select style="width: 100%" name="annotation_value_type">
       <option>text</option>
       <option>timestamp</option>
       <option>boolean</option>
@@ -13,8 +13,8 @@
   <div class="col-xs-3">
     <label>Value name</label>
     <div class="input-group" style="width: 100%">
-      <input class="form-control" style="width: 80%" name="value_name_like"/>
-      <select class="form-control" style="padding-left: 0; width: 20%" name="value_name_like_op">
+      <input class="form-control" style="width: 80%" name="annotation_value_name_like"/>
+      <select class="form-control" style="padding-left: 0; width: 20%" name="annotation_value_name_like_op">
         <option>like</option>
         <option>notlike</option>
       </select>
@@ -23,8 +23,8 @@
   <div class="col-xs-3">
     <label>Value</label>
     <div class="input-group" style="width: 100%">
-      <input type="text" class="form-control" style="width: 80%" name="value"/>
-      <select class="form-control" style="padding-left: 0; width: 20%" name="value_operator">
+      <input type="text" class="form-control" style="width: 80%" name="annotation_value"/>
+      <select class="form-control" style="padding-left: 0; width: 20%" name="annotation_value_operator">
         <option>==</option>
         <option>></option>
         <option>>=</option>
@@ -34,11 +34,4 @@
       </select>
     </div>
   </div>
-  <div>
-    <span onclick="vboa.add_value_query_annotations('more-value-query-annotations')">
-      <span class="glyphicon glyphicon-plus"></span>
-    </span>
-  </div>
-</div>
-<div id="more-value-query-annotations">
 </div>
