--- a/src/vboa/static/html/more_ingestion_duration.html
+++ b/src/vboa/static/html/more_ingestion_duration.html
@@ -2,9 +2,9 @@
   <div class="col-xs-3">
     <label>Ingestion duration</label>
     <div>
-      <input style="float: left; width: 90%" type="text" class="form-control"  name="ingestion_duration"/>
+      <input style="float: left; width: 90%" type="text" class="form-control"  name="ingestion_duration" id="ingestion_duration_text"/>
       <div style="float: right; width: 10%">
-        <select class="form-control" style="padding-left: 0" name="ingestion_duration_operator">
+        <select class="form-control" style="padding-left: 0" name="ingestion_duration_operator" id="ingestion_duration_operator">
           <option>==</option>
           <option>></option>
           <option>>=</option>
