--- a/src/vboa/static/html/more_start_stop.html
+++ b/src/vboa/static/html/more_start_stop.html
@@ -2,12 +2,12 @@
   <div class="col-xs-3">
     <label>Start</label>
     <div class="input-group date">
-      <input type="text" class="form-control" name="start"/>
+      <input type="text" class="form-control" name="start" id="start_input"/>
       <span class="input-group-addon">
         <span class="glyphicon glyphicon-calendar"></span>
       </span>
       <div>
-        <select class="form-control" style="padding-left: 0" name="start_operator">
+        <select class="form-control" style="padding-left: 0" name="start_operator" id="start_operator">
           <option>==</option>
           <option>></option>
           <option>>=</option>
@@ -21,12 +21,12 @@
   <div class="col-xs-3">
     <label>Stop</label>
     <div class="input-group date">
-      <input type="text" class="form-control"  name="stop"/>
+      <input type="text" class="form-control"  name="stop" id="stop_input"/>
       <span class="input-group-addon">
         <span class="glyphicon glyphicon-calendar"></span>
       </span>
       <div>
-        <select class="form-control" style="padding-left: 0" name="stop_operator">
+        <select class="form-control" style="padding-left: 0" name="stop_operator" id="stop_operator">
           <option>==</option>
           <option>></option>
           <option>>=</option>
