--- a/src/vboa/static/html/more_value_query_events.html
+++ b/src/vboa/static/html/more_value_query_events.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-xs-3">
     <label>Value type</label>
-    <select style="width: 100%" name="event_value_type">
+    <select style="width: 100%" name="event_value_type" id="events_value_type">
       <option>text</option>
       <option>timestamp</option>
       <option>boolean</option>
@@ -13,8 +13,8 @@
   <div class="col-xs-3">
     <label>Value name</label>
     <div class="input-group" style="width: 100%">
-      <input class="form-control" style="width: 80%" name="event_value_name_like"/>
-      <select class="form-control" style="padding-left: 0; width: 20%" name="event_value_name_like_op">
+      <input class="form-control" style="width: 80%" name="event_value_name_like" id="events_value_name_text"/>
+      <select class="form-control" style="padding-left: 0; width: 20%" name="event_value_name_like_op" id="events_value_name_option">
         <option>like</option>
         <option>notlike</option>
       </select>
@@ -23,8 +23,8 @@
   <div class="col-xs-3">
     <label>Value</label>
     <div class="input-group" style="width: 100%">
-      <input type="text" class="form-control" style="width: 80%" name="event_value"/>
-      <select class="form-control" style="padding-left: 0; width: 20%" name="event_value_operator">
+      <input type="text" class="form-control" style="width: 80%" name="event_value" id="events_value_value_text"/>
+      <select class="form-control" style="padding-left: 0; width: 20%" name="event_value_operator" id="events_value_value_operator">
         <option>==</option>
         <option>></option>
         <option>>=</option>
