--- a/src/vboa/static/html/more_generation_time.html
+++ b/src/vboa/static/html/more_generation_time.html
@@ -2,12 +2,12 @@
   <div class="col-xs-3">
     <label>Generation time</label>
     <div class="input-group date">
-      <input type="text" class="form-control" name="generation_time"/>
+      <input type="text" class="form-control" name="generation_time" id="generation-time-text"/>
       <span class="input-group-addon">
         <span class="glyphicon glyphicon-calendar"></span>
       </span>
       <div>
-        <select class="form-control" style="padding-left: 0" name="stop_operator">
+        <select class="form-control" style="padding-left: 0" name="stop_operator" id="generation-time-operator">
           <option>==</option>
           <option>></option>
           <option>>=</option>
