--- a/src/vboa/static/html/more_ingestion_time.html
+++ b/src/vboa/static/html/more_ingestion_time.html
@@ -2,12 +2,12 @@
   <div class="col-xs-3">
     <label>Ingestion time</label>
     <div class="input-group date">
-      <input type="text" class="form-control"  name="ingestion_time" id="ingestion_duration_text"/>
+      <input type="text" class="form-control"  name="ingestion_time" id="ingestion-time-text"/>
       <span class="input-group-addon">
         <span class="glyphicon glyphicon-calendar"></span>
       </span>
       <div>
-        <select class="form-control" style="padding-left: 0" name="ingestion_time_operator" id="ingestion_duration_operator">
+        <select class="form-control" style="padding-left: 0" name="ingestion_time_operator" id="ingestion-time-operator">
           <option>==</option>
           <option>></option>
           <option>>=</option>
