--- a/src/vboa/static/html/more_validity_start_validity_stop.html
+++ b/src/vboa/static/html/more_validity_start_validity_stop.html
@@ -2,12 +2,12 @@
   <div class="col-xs-3">
     <label>Validity start</label>
     <div class="input-group date">
-      <input type="text" class="form-control" name="validity_start"/>
+      <input type="text" class="form-control" name="validity_start" id="start-input"/>
       <span class="input-group-addon">
         <span class="glyphicon glyphicon-calendar"></span>
       </span>
       <div>
-        <select class="form-control" style="padding-left: 0" name="validity_start_operator">
+        <select class="form-control" style="padding-left: 0" name="validity_start_operator" id="start-operator">
           <option>==</option>
           <option>></option>
           <option>>=</option>
@@ -21,12 +21,12 @@
   <div class="col-xs-3">
     <label>Validity stop here</label>
     <div class="input-group date">
-      <input type="text" class="form-control" name="validity_stop"/>
+      <input type="text" class="form-control" name="validity_stop" id="stop-input"/>
       <span class="input-group-addon">
         <span class="glyphicon glyphicon-calendar"></span>
       </span>
       <div>
-        <select class="form-control" style="padding-left: 0" name="validity_stop_operator">
+        <select class="form-control" style="padding-left: 0" name="validity_stop_operator" id="stop-operator">
           <option>==</option>
           <option>></option>
           <option>>=</option>
