Add view interface for navigating through the reports

--- a/src/vboa/static/html/more_validity_start_validity_stop.html
+++ b/src/vboa/static/html/more_validity_start_validity_stop.html
@@ -19,7 +19,7 @@
     </div>
   </div>
   <div class="col-xs-3">
-    <label>Validity stop here</label>
+    <label>Validity stop</label>
     <div class="input-group date">
       <input type="text" class="form-control" name="validity_stop" id="stop-input"/>
       <span class="input-group-addon">
