--- a/src/vboa/static/html/more_report_validity_duration.html
+++ b/src/vboa/static/html/more_report_validity_duration.html
@@ -9,8 +9,10 @@
           <option>></option>
           <option>>=</option>
           <option><</option>
-                     <option><=</option>
+          <option><=</option>
           <option>!=</option>
+          <option>like</option>
+          <option>notlike</option>
         </select>
       </div>
     </div>
