--- a/src/vboa/static/html/more_reported_validity_start_reported_validity_stop.html
+++ b/src/vboa/static/html/more_reported_validity_start_reported_validity_stop.html
@@ -33,6 +33,8 @@
           <option><</option>
           <option><=</option>
           <option>!=</option>
+          <option>like</option>
+          <option>notlike</option>
         </select>
       </div>
     </div>
