--- a/src/vboa/static/html/more_processing_duration.html
+++ b/src/vboa/static/html/more_processing_duration.html
@@ -2,8 +2,8 @@
   <div class="col-xs-3">
     <label>Processing duration</label>
     <div>
-      <input style="float: left; width: 90%" type="text" class="form-control"  name="processing_duration" id="processing-duration-text"/>
-      <div style="float: right; width: 10%">
+      <input style="float: left; width: 80%" type="text" class="form-control"  name="processing_duration" id="processing-duration-text"/>
+      <div style="float: right; width: 20%">
         <select class="form-control" style="padding-left: 0" name="processing_duration_operator" id="processing-duration-operator">
           <option>==</option>
           <option>></option>
@@ -11,6 +11,8 @@
           <option><</option>
           <option><=</option>
           <option>!=</option>
+          <option>like</option>
+          <option>notlike</option>
         </select>
       </div>
     </div>
