--- a/src/vboa/static/html/more_reported_generation_time.html
+++ b/src/vboa/static/html/more_reported_generation_time.html
@@ -14,6 +14,8 @@
           <option><</option>
           <option><=</option>
           <option>!=</option>
+          <option>like</option>
+          <option>notlike</option>
         </select>
       </div>
     </div>
