--- a/src/vboa/static/html/more_source_validity_duration.html
+++ b/src/vboa/static/html/more_source_validity_duration.html
@@ -2,15 +2,17 @@
   <div class="col-xs-3">
     <label>Source validity duration (seconds)</label>
     <div>
-      <input style="float: left; width: 90%" type="text" class="form-control"  name="source_validity_duration"/>
-      <div style="float: right; width: 10%">
+      <input style="float: left; width: 80%" type="text" class="form-control"  name="source_validity_duration"/>
+      <div style="float: right; width: 20%">
         <select class="form-control" style="padding-left: 0" name="source_validity_duration_operator">
           <option>==</option>
           <option>></option>
           <option>>=</option>
           <option><</option>
-                     <option><=</option>
+          <option><=</option>
           <option>!=</option>
+          <option>like</option>
+          <option>notlike</option>
         </select>
       </div>
     </div>
