--- a/src/vboa/static/html/more_start_stop.html
+++ b/src/vboa/static/html/more_start_stop.html
@@ -12,8 +12,10 @@
           <option>></option>
           <option>>=</option>
           <option><</option>
-                     <option><=</option>
+          <option><=</option>
           <option>!=</option>
+          <option>like</option>
+          <option>notlike</option>
         </select>
       </div>
     </div>
@@ -31,8 +33,10 @@
           <option>></option>
           <option>>=</option>
           <option><</option>
-                     <option><=</option>
+          <option><=</option>
           <option>!=</option>
+          <option>like</option>
+          <option>notlike</option>
         </select>
       </div>
     </div>
