--- a/src/vboa/static/html/more_value_query_annotations.html
+++ b/src/vboa/static/html/more_value_query_annotations.html
@@ -13,8 +13,14 @@
   <div class="col-xs-3">
     <label>Value name</label>
     <div class="input-group" style="width: 100%">
-      <input class="form-control" style="width: 80%" name="annotation_value_name_like" id="value-name-text"/>
-      <select class="form-control" style="padding-left: 0; width: 20%" name="annotation_value_name_like_op" id="value-name-option">
+      <input class="form-control" style="width: 80%" name="annotation_value_name" id="value-name-text"/>
+      <select class="form-control" style="padding-left: 0; width: 20%" name="annotation_value_name_op" id="value-name-option">
+        <option>==</option>
+        <option>></option>
+        <option>>=</option>
+        <option><</option>
+        <option><=</option>
+        <option>!=</option>
         <option>like</option>
         <option>notlike</option>
       </select>
@@ -31,6 +37,8 @@
         <option><</option>
         <option><=</option>
         <option>!=</option>
+        <option>like</option>
+        <option>notlike</option>
       </select>
     </div>
   </div>
