--- a/src/vboa/static/html/more_event_duration.html
+++ b/src/vboa/static/html/more_event_duration.html
@@ -2,7 +2,7 @@
   <div class="col-xs-3">
     <label>Event duration (seconds)</label>
     <div>
-      <input style="float: left; width: 80%" type="text" class="form-control"  name="event_duration" id="event-duration-input"/>
+      <input style="float: left; width: 80%" type="text" class="form-control"  name="event_duration" id="event-duration-text"/>
       <div style="float: right; width: 20%">
         <select class="form-control" style="padding-left: 0" name="event_duration_operator" id="event-duration-operator">
           <option>==</option>
